typescript/checker/tests/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration6.ts.stderr
error: Unexpected token Some(Word(constructor))
 --> $DIR/tests/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration6.ts:2:17
  |
2 |   public public constructor() { }
  |                 ^^^^^^^^^^^

